--- a/BBY162_Python_a_Giris.ipynb
+++ b/BBY162_Python_a_Giris.ipynb
@@ -138,13 +138,25 @@
       "cell_type": "code",
       "metadata": {
         "id": "CBHkVbIlUXgW",
-        "cellView": "both"
+        "cellView": "both",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d344e50b-e6af-4ab3-a39e-dd6e0b3036d2"
       },
       "source": [
-        "print()"
+        "print(\"merhaba dünya ben Umut \")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "merhaba dünya ben Umut \n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
